added ignore for office

--- a/.gitignore
+++ b/.gitignore
@@ -297,3 +297,20 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+
+*.tmp
+
+# Word temporary
+~$*.doc*
+
+# Excel temporary
+~$*.xls*
+
+# Excel Backup File
+*.xlk
+
+# PowerPoint temporary
+~$*.ppt*
+
+# Visio autosave temporary files
+*.~vsd*
