Larman, we have connections

--- a/Server/Core/Core.csproj
+++ b/Server/Core/Core.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Auctioneer.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
