--- a/Server/UI.CLI/UI.CLI.csproj
+++ b/Server/UI.CLI/UI.CLI.csproj
@@ -48,5 +48,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{a6a25c14-ed6e-4178-bc84-b461fc8cfb79}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
