--- a/Server/Core/Core.csproj
+++ b/Server/Core/Core.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Auctioneer.cs" />
+    <Compile Include="Client.cs" />
     <Compile Include="Connection.cs" />
+    <Compile Include="ClientRepository.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
