Basic client ok

--- a/Client/UI.CLI/UI.CLI.csproj
+++ b/Client/UI.CLI/UI.CLI.csproj
@@ -48,5 +48,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{3603d232-d8f1-4aec-9c02-136f15cddad5}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
