--- a/Server/Core/Core.csproj
+++ b/Server/Core/Core.csproj
@@ -40,10 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AHPHandler.cs" />
     <Compile Include="Auctioneer.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="ClientRepository.cs" />
+    <Compile Include="Debug.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
